--- a/user-location/package.json
+++ b/user-location/package.json
@@ -7,6 +7,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "serve": "^11.2.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
